# jsonplaceholder

./: README.md  pyproject.toml
src/jsonplaceholder/: __init__.py  client.py
